Iac-alg-asg-setup/security.tf
# ALB Security Group
resource "aws_security_group" "alb_sg" {
  vpc_id = aws_vpc.prod.id
  ingress {
    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = { Name = "alb-sg" }
}
# EC2 Security Group
resource "aws_security_group" "ec2_sg" {
  vpc_id = aws_vpc.prod.id
  ingress {
    from_port = 80

    to_port = 80

    protocol = "tcp"

    security_groups = [aws_security_group.alb_sg.id]
  }
  egress {
    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = { Name = "ec2-sg" }
}
